[package]
name = "benita-commander"
version = "0.1.1"
authors = ["Joaquin Rosales <globojorro@gmail.com>"]
description = "Control aquatic sensors with daemons and from the command-line."
license = "MIT"

[dependencies]
benita = { git = "https://github.com/saibatizoku/benita.git", branch = "master" }
chrono = "0.4.0"
clap = "2"
error-chain = "~0.11.0"
fern = "0.4"
log = "0.3"
rustyline = { git = "https://github.com/kkawakam/rustyline", branch = "master" }

[profile.release]
lto = true
